# FactCheck-AI

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/routers/: dev_stream.py  dialogue.py  sessions.py
backend/app/schemas/: sessions.py
backend/factcheck/: __init__.py  config.py  state.py
backend/factcheck/agents/: __init__.py  dialogue.py  extractor.py  orchestrator.py  reporter.py  verifier.py
backend/factcheck/db/: __init__.py  session_store.py
backend/factcheck/dialogue/: __init__.py  config.py  graph.py  prompts.py  schemas.py  service.py
backend/factcheck/extractor/: README.md  __init__.py  config.py  graph.py  prompts.py  schemas.py
backend/factcheck/graph/: event_bus.py  pipeline.py  runner.py
backend/factcheck/http/: __init__.py  pinned_fetch.py  url_policy.py
backend/factcheck/llm/: concurrency.py  (+4 more)
backend/scripts/: stress_test_extractor.py  stress_test_extractor_verifier.py
backend/tests/: conftest.py  test_api_health.py  test_assertion_profile.py  test_config.py  test_decomposition_routing.py  test_dev_extractor_stream.py  test_extractor_agent.py  test_extractor_fidelity.py  test_extractor_graph.py  test_extractor_nodes.py  test_extractor_prompts.py  test_extractor_structured.py  test_extractor_utils.py  test_llm_concurrency.py  test_llm_factory.py  test_llm_structured.py  test_ollama_extractor_integration.py  test_ollama_health.py  test_ollama_verifier_integration.py  test_pipeline.py  test_reporter.py  test_search_fallback.py  test_selection_routing.py  test_state_schema.py
(+123 files in other folders)
