[tool.poetry]
name = "factcheck-ai-backend"
version = "0.1.0"
description = "Phase 1 backend scaffold for FactCheck AI."
authors = ["Hirushikanth Vidyanandan"]
readme = "../README.md"
packages = [
    { include = "app" },
    { include = "factcheck" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic-settings = "^2.0.0"
httpx = "^0.27.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-ollama = "^0.2.0"
pysbd = "^0.3.4"
duckduckgo-search = "^8.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that call external local services such as Ollama",
]
filterwarnings = [
    "ignore:'asyncio\\.iscoroutinefunction' is deprecated:DeprecationWarning",
    "ignore:'asyncio\\.get_event_loop_policy' is deprecated:DeprecationWarning",
    "ignore:'asyncio\\.set_event_loop_policy' is deprecated:DeprecationWarning",
    "ignore:The default value of `allowed_objects` will change in a future version:langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
